src/test/deca/syntax/invalid/field_in_main.deca
//Description
//    Vérifier la decl d'attrivut
//
//Résultats :
//    Erreur Syntaxique ligne 9
//

{
protected int a = 4;
}
